# ARESdog_ws

./: .gitignore  README.md  ares_usb_comm_design.md  cmd_trajectory.py  launch.sh  leg_kinematics.md  main.c  stand.py
src/ares_comm/: CMakeLists.txt
src/ares_comm/include/ares_comm/: motor_angle_data.hpp
src/ares_comm/launch/: motor_angle.launch.py
src/ares_comm/src/: motor_angle_node.cpp
src/ares_usb/: ares_usb_comm_design.md
src/ares_usb/include/ares_usb_comm/: helpers.hpp
src/ares_usb/src/: usb_bridge_node.cpp
src/ares_usb_comm/: CMakeLists.txt  package.xml
src/ares_usb_comm/ARES_bulk_library/: ares_protocol.cpp
src/ares_usb_comm/launch/: comm_bringup.launch.py
src/ares_usb_comm/msg/: MotorCmd.msg  MotorState.msg
src/ares_usb_comm/src/: test_publisher_node.cpp  usb_bridge_node.cpp
src/aresdog_comm/: CMakeLists.txt  package.xml
src/aresdog_comm/include/: aresLeg.h  aresRobot.h  enumClass.h  mathTools.h
src/aresdog_controller/: CMakeLists.txt  balance_controller_design.md  jump_control_design.md  landing_control_design.md  package.xml  setup.py
src/aresdog_controller/aresdog_controller/: jump2.py  jump_controller.py
src/aresdog_controller/include/aresdog_controller/: balance_controller.hpp  leg_kinematics.hpp
src/aresdog_controller/include/aresdog_controller/gait/: CycloidTrajectory.h  GaitGenerator.h  LegKinematics.h
src/aresdog_controller/src/: CycloidTrajectory.cpp  GaitGenerator.cpp  LegKinematics.cpp  WaveGenerator.cpp  aresdog_balance_walk_node.cpp  aresdog_controller_node.cpp  balance_controller.cpp  leg_kinematics.cpp  test_motor_cmd_node.cpp
src/control_respository/: README.md  cmd_trajectory.py
src/control_respository/state_machine_package/: constants.py
src/remote_control/: README.md  config.json  index.html
src/rl_controller/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/rl_controller/launch/: robot_bringup.launch.py
src/rl_controller/rl_controller/: __init__.py  rl_controller_node.py
src/robot_controller/: CMakeLists.txt  package.xml  policy.onnx  setup.cfg  setup.py
src/robot_controller/launch/: robot_bringup.launch.py
src/robot_controller/robot_controller/: __init__.py
src/ros_web/: config.json  script.js
